--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -30,22 +30,21 @@
                     <input type="text" name="username" id="username" placeholder="Username"><br><br>
                     <input type="email" name="email" id="email" placeholder="Email ID"><br><br>
                     <input type="number" name="phone"   id="phone" placeholder="Phone No."><br><br>
-                    
                     <input type="password" name="password" id="password" placeholder="Password"><br><br>
-
-                
-
                     <button type="submit">Next</button>
                 </form>
             </div>
+            <div id="already-user-div">
+                <h5>Already have an account ? <a href="./login.html">Login</a></h5> 
+            </div>
         </div>
         <div id="advertise-div">
-            Some Exhbition
+            <h3>Some Exhibition</h3>
         </div>
     </div>
     
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-
+  <script src="../js/signup.js"></script>
   
 </html>
